# YOLOv8-ONNXRuntime-CPP

./: CMakeLists.txt  README.md  YoloV8-ONNXRuntime-CPP.sln  engine.cpp  engine.hpp  main.cpp
YoloV8-ONNXRuntime-CPP/: YoloV8-ONNXRuntime-CPP.vcxproj  engine.cpp  engine.hpp  main.cpp
